CloudFormationTemplate/Template_1.yml
Resources:
  Ec2InstanceCustomer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0005e0cfe09cc9050
      SecurityGroupIds:
        - !Ref SecurityGroupPublic
      SubnetId: !Ref SubnetPublic
  Ec2InstanceAdmin:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0005e0cfe09cc9050
      SecurityGroupIds:
        - !Ref SecurityGroupPrivate
      SubnetId: !Ref SubnetPrivate
  MyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true

  SecurityGroupPublic:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable inbound Rule for SSH CustomerInstance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref MyVpc    

  SecurityGroupPrivate:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable inbound Rule for Admin Instance 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SubnetPublic
      VpcId: !Ref MyVpc     
  SubnetPublic:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref MyVpc
      AvailabilityZone: !Select [0, !GetAZs ]

  SubnetPrivate:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref MyVpc
      AvailabilityZone: !Select [0, !GetAZs ]
