CloudFormationTemplate/Template_2.yml
Resources:
  ModaCustomer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0005e0cfe09cc9050
      SecurityGroupIds:
        - !Ref ModaSGPublic
      SubnetId: !Ref ModaSubnetPublic
      Tags:
        - Key: Name
          Value: !Join [" ", [Customer, Instance, !Ref AWS::Region ]]
  ModaAdmin:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0005e0cfe09cc9050
      SecurityGroupIds:
        - !Ref ModaSGPrivate
      SubnetId: !Ref ModaSubnetPrivate
      Tags:
        - Key: Name
          Value: !Join [" ", [Admin, Instance, !Ref AWS::Region ]]
  ModaVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: ModaVpc
  ModaSGPublic:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref ModaVPC
      GroupDescription: Enable SSH via port 80 and 22 for inbound ModaCustomer 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: PublicSecurityGroup     
  ModaSGPrivate:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref ModaVPC
      GroupDescription: Enable SSH via port 80 and 22 for inbound ModaCustomer 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !GetAtt ModaSubnetPublic.CidrBlock
      Tags:
        - Key: Name
          Value: PrivateSecurityGroup     
  ModaSubnetPublic:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ModaVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs ]
      Tags:
        - Key: Name
          Value: PublicSubnet 
  ModaSubnetPrivate:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ModaVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs ]
      Tags:
        - Key: Name
          Value: PrivateSubnet
          #S3 cognito
